@@ -33,6 +33,7 @@ dependencies {
     // --------- mapper
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     // --------- jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -41,6 +42,36 @@ dependencies {
 
     // --------- swagger
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
+    // --------- Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // --------- Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
+
+    // --------- Mysql
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // --------- google guava
+    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
+
+    // --------- DataJpaTest
+    compileOnly 'org.projectlombok:lombok'
+    compileOnly('org.springframework.boot:spring-boot-starter-test')
+
+    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+
+// Compile Time VM Options (1)
+compileJava {
+    options.compilerArgs += ['--enable-preview', '-Amapstruct.defaultComponentModel=spring']
+}
+
+//// Compile Time VM Options (2)
+compileTestJava {
+    options.compilerArgs += ['--enable-preview', '-Amapstruct.defaultComponentModel=spring']
 }
 
 tasks.named('test') {
